Fixed the action buttons alignment, mad annoying

--- a/html/css/employment.css
+++ b/html/css/employment.css
@@ -233,7 +233,7 @@
 .employment-action-buttons > i {
     position: relative;
     float: left;
-    margin-left: 1.8vh;
+    margin-left: 2.6vh;
     left: 4vh;
     top: 2.1vh;
     font-size: 1.8vh;
